# Calypso

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  SConstruct
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: builds.yml
addons/: calypso.gdextension
doc_classes/: Calypso.xml
example-project/: main.gd  project.godot
example-project/addons/calypso/: calypso.gdextension
src/: calypso.cpp  calypso.h  lib.rs  main.rs  register_types.cpp  register_types.h
src/lib/: calypso_loader.rs  packages.rs
