cargo-features = ["profile-rustflags"]
[package]
name = "calypso"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }



[lib]
path = "src/lib.rs"
name = "calypso"
crate-type = ["cdylib","rlib"] # i have no idea why i need this


[[bin]]
name = "calypso-bin"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1